--- a/main/style.css
+++ b/main/style.css
@@ -59,8 +59,9 @@ html {
 }
 
 body {
+    max-width: 1440px;
     min-width: 375px;
-    max-height: 100vh;
+    min-height: 100vh;
 }
 
 .visually-hidden {
@@ -76,7 +77,7 @@ body {
 }
 
 .card__displayer {
-    width: 31%;
+    width: 30.2rem;
     min-height: 100vh;
     position: relative;
     background-image: url("../images/bg-main-desktop.png");
@@ -85,7 +86,7 @@ body {
 }
 
 .card {
-    width: 100%;
+    width: 27.9rem;
     height: 15.3rem;
     position: absolute;
     font-size: var(--fs-300);
@@ -97,8 +98,8 @@ body {
 
 .card_front {
     padding: 2rem;
-    left: 30%;
-    top: 20%;;
+    left: 35%;
+    top: 15%;;
     background-image: url("../images/bg-card-front.png");
     background-size: cover;
 }
