--- a/main/style.css
+++ b/main/style.css
@@ -119,3 +119,101 @@ body {
   left: 55%;
   top: 51%;
 }
+
+.card__cvc {
+  position: absolute;
+  top: 46%;
+  left: 80%;
+}
+
+.form {
+  width: 70%;
+  padding-right: 10rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: var(--fs-100);
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  color: var(--clr-violett-900);
+}
+
+.inputs__container {
+  width: 50%;
+  border: 0;
+}
+
+.input__area {
+  padding-bottom: 2.2rem;
+  position: relative;
+}
+
+.input__area label {
+  display: block;
+  margin-bottom: 0.4rem;
+  font-weight: bold;
+}
+
+.input__area input {
+  width: 100%;
+  padding: 0.7rem;
+  position: relative;
+  display: inline-block;
+  font-size: var(--fs-600);
+  border: 2px solid var(--clr-violett-100);
+  border-radius: 0.5rem;
+}
+
+.input__area input::placeholder {
+  color: var(--clr-violett-200);
+}
+
+.input__area_group {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+input[name="Month"], input[name="Year"] {
+  width: 45%;
+}
+
+input[type="number"]::-webkit-inner-spin-button {
+  appearance: none;
+}
+
+.error-message {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 15%;
+  font-size: var(--fs-100);
+  font-weight: bold;
+  text-transform: none;
+  letter-spacing: 0;
+  color: var(--clr-red-500);
+  visibility:hidden;
+}
+
+.input__area.error .error-message {
+  visibility: visible;
+}
+
+.input__area.error input {
+  border: 2px solid var(--clr-red-500);
+}
+
+.btn {
+  display: block;
+  font-size: var(--fs-600);
+  letter-spacing: 0.1rem;
+  border: 0;
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+
+.btn-submit {
+  width: 100%;
+  padding: 0.8rem;
+  color: var(--clr-white);
+  background-color: var(--clr-violett-900);
+}
