--- a/main/style.css
+++ b/main/style.css
@@ -217,3 +217,7 @@ input[type="number"]::-webkit-inner-spin-button {
   color: var(--clr-white);
   background-color: var(--clr-violett-900);
 }
+
+.btn-submit:disabled {
+  background: grey;
+}
